--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,9 +1,24 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  <div class="flex-center"> 
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title class="enterprise-name">Finance</ion-card-title>
+        <ion-card-subtitle class="login">Login</ion-card-subtitle>
+      </ion-card-header>
 
+      <ion-card-content>
+        <ion-item>
+          <ion-label position="floating">Email</ion-label>
+          <ion-input type="Email"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="floating">Senha</ion-label>
+          <ion-input type="Senha"></ion-input>
+        </ion-item>
+        <ion-button color="dark" fill="clear" size="full">Esqueceu o Email/Senha?</ion-button>
+        <ion-button color="sucess" size="full" class="login-button">Login</ion-button>
+        <ion-button color="sucess" size="full" class="register-button">Cadastre-se</ion-button>
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
