Terminada a estilização da tela de login

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,21 +1,21 @@
 <ion-content>
-  <div class="flex-center"> 
-    <ion-card>
+  <div class="flex-center">
+    <ion-card class="card-body">
       <ion-card-header>
-        <ion-card-title class="enterprise-name">Finance</ion-card-title>
-        <ion-card-subtitle class="login">Login</ion-card-subtitle>
+        <ion-card-title class="enterprise-name">Finance Tech</ion-card-title>
+        <ion-card-title class="login">Login</ion-card-title>
       </ion-card-header>
 
       <ion-card-content>
         <ion-item>
-          <ion-label position="floating">Email</ion-label>
+          <ion-label class="Email" position="floating">Email</ion-label>
           <ion-input type="Email"></ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">Senha</ion-label>
+          <ion-label class="Senha" position="floating">Senha</ion-label>
           <ion-input type="Senha"></ion-input>
         </ion-item>
-        <ion-button color="dark" fill="clear" size="full">Esqueceu o Email/Senha?</ion-button>
+        <ion-button fill="clear" size="full" class="text-card-button">Esqueceu o Email/Senha?</ion-button>
         <ion-button color="sucess" size="full" class="login-button">Login</ion-button>
         <ion-button color="sucess" size="full" class="register-button">Cadastre-se</ion-button>
       </ion-card-content>
