Página de carregamento criada

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,11 +15,13 @@ ion-menu.md ion-list {
 
 ion-menu.md ion-note {
   margin-bottom: 30px;
+  color: black;
 }
 
 ion-menu.md ion-list-header,
 ion-menu.md ion-note {
   padding-left: 10px;
+  color: black;
 }
 
 ion-menu.md ion-list#inbox-list {
